--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>基于Mapbox+deckGl的路线可视化方案</title>
+  <title>基于地图可视化模型方案</title>
 </head>
 <body>
 <div id="app">
